# pere

./: .gitignore  Cargo.toml  README.md  compile.sh
src/: main.rs
