[package]
name = "pere"
version = "0.1.0"
authors = ["Jake W. Ireland <jakewilliami@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.19", features = ["cargo", "wrap_help", "derive"] }
colors-transform = "0.2.11"
regex = "1.7.0"
serde = "1.0.147"
serde_yaml = "0.9.14"
walkdir = "2.3.2"
